--- a/Hero Banner Slider with transparent fixed header/style.css
+++ b/Hero Banner Slider with transparent fixed header/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 .mainContent{
-    height: 200vh;
+    height: 200vh;/*Asignamos suficiente altura para poder hacer scroll*/
     width: 100%;
 }
 
@@ -49,7 +49,7 @@ body{
 
 .logo{
     height: 50%;
-    transition: all 0.3s;
+    transition: all 0.3;
 }
 
 .menuItem{
