--- a/E-Commerce Product Card/style.css
+++ b/E-Commerce Product Card/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
@@ -51,6 +52,7 @@ body{
 }
 
 .product-info-container{
+    padding-top: 1rem;
     height: 50%;
     width: 100%;
     border-radius: inherit;
@@ -141,7 +143,7 @@ body{
 .add-to-cart{
     height: 6.4vh;
     width: 100%;
-    margin-top: 2rem;
+    margin-top: auto;
     background: linear-gradient(-40deg, #EBC609, #5A4C05);
     display: flex;
     justify-content: center;
